main/default/objects/Economic_Activity__c/Economic_Activity__c.object-meta.xml
<CustomObject>
    <label>Economic Activity</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>EconActivity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Economic Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>