main/default/objects/Economic_Activity__c/fields/Economic_Activity__c.field-meta.xml
<CustomField>
    <fullName>Economic_Activity__c</fullName>
    <label>Economic Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>