main/default/objects/Economic_Activity__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Parent EU Taxonomy Sector</description>
    <inlineHelpText>Parent EU Taxonomy Sector</inlineHelpText>
    <label>Sector</label>
    <referenceTo>Taxonomy_Sectors__c</referenceTo>
    <relationshipLabel>Economic Activities</relationshipLabel>
    <relationshipName>Economic_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>